# auto-embed

./: .gitignore  Makefile  README.md  example-auto-embed.yaml  football-player-auto-embed.yaml  pyproject.toml
autoembed/src/: __init__.py
autoembed/src/cli/: autoembed.py  generate_interactive_visualization_cli.py  predict_for_model_release_cli.py  train_classified_embedding_model_cli.py
autoembed/src/cli/autoembed/: autoembed_cli.py
autoembed/src/domain/: dataset_preprocessor.py
autoembed/src/domain/entites/: dataset_analysis.py  embeddings.py  loss_weights.py
autoembed/src/domain/exceptions/: embedding_shape_mismatch_error.py
autoembed/src/domain/interfaces/: data_repository_interface.py  embedding_model_interface.py  embeddings_repository_interface.py  model_registry_interface.py
autoembed/src/infrastructure/data_repository/: data_repository_local_csv_adapter.py
autoembed/src/infrastructure/embeddings/: embedding_chromadb_adapter.py
autoembed/src/infrastructure/model/: embedding_model_keras_adapter.py  local_model_registry_adapter.py
autoembed/src/usescases/queries/: what_is_my_recommendations_usecases.py  what_is_my_recommendations_usecases_query.py
autoembed/src/yaml/: auto_embed_yaml_schema.py
notebooks/: modeling.ipynb
recommendations/src/: __init__.py
recommendations/src/api/: api.py
recommendations/src/cli/: train_classified_embedding_model_cli.py  what_is_my_classified_recommendation_cli.py
recommendations/src/domain/: dataset_preprocessor.py
recommendations/src/domain/entites/: classified_embedded.py  classified_events.py  columns.py  dataset_analysis.py  loss_weights.py
recommendations/src/domain/interfaces/: classified_embedding_model_interface.py  classified_embeddings_repository_interface.py  classified_repository_interface.py  classified_vectors_repository_interface.py  customer_vectors_repository_interface.py  model_registry_interface.py  user_embedding_repository_interface.py
recommendations/src/infrastructure/classified_repository/: classified_repository_athena_adapter.py  classified_repository_local_adapter.py  training_sql_query.sql
recommendations/src/infrastructure/embeddings/: classified_embedding_chromadb_adapter.py  user_embedding_repository_chromadb_adapter.py
recommendations/src/infrastructure/model/: classified_embedding_model_keras_adapter.py  local_model_registry_adapter.py
recommendations/src/usescases/queries/: what_is_my_classified_recommendations_usecases.py  what_is_my_classified_recommendations_usecases_query.py
recommendations/src/usescases/users/: update_users_embedding_command.py  (+1 more)
(+12 files in other folders)
